# binsolver-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: basic.py
src/binsolver/: __init__.py  client.py  models.py
tests/: test_models.py
