[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binsolver"
version = "0.1.0"
description = "Official Python SDK for the BinSolver API"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "BinSolver Team", email = "hello@binsolver.com" },
]
keywords = ["bin packing", "3d packing", "optimization", "logistics", "api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.25.0",
  "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://binsolver.com"
Repository = "https://github.com/binsolver/binsolver-py"
Documentation = "https://binsolver.com/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/binsolver"]
